# payments-agent-audit

./: .gitignore  .zenodo.json  ARCHITECTURE.md  ASSURANCE-GUIDE.md  AUTONOMY_LADDER.md  CHANGELOG.md  CITATION.cff  DISCLAIMER.md  FAILURE-MODES.md  LICENSE-MIT  LIMITATIONS.md  README.md  WORKED_EXAMPLE.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: DOI_PLAN.md  PYPI_TRUSTED_PUBLISHING_SETUP.md
docs/research/: primary_source_research_2026-06-05.md
examples/: instant_rail_promotion_refusal.py  ofac_screen_and_disposition.py
scripts/: mutation_pass.py
src/payments_agent_audit/: __init__.py
src/payments_agent_audit/governance/: __init__.py  audit_chain.py  autonomy_ladder.py  defcon.py  effective_challenge_harness.py  ledger_store.py  ofac_screening.py  rail_finality.py  reg_e.py  retention.py  sar_workflow.py  sovereign_veto.py  sponsor_bank.py  timestamp_source.py  witness_anchor.py
src/payments_agent_audit/schemas/: __init__.py  audit_event.py
tests/: conftest.py  test_audit_chain.py  test_autonomy_ladder.py  test_defcon.py  test_effective_challenge.py  test_ofac_screening.py  test_rail_finality.py  test_reg_e.py  test_retention.py  test_sar_workflow.py  test_schema.py  test_sovereign_veto.py  test_sponsor_bank.py
tests/adversarial/: test_al_probes.py
tests/golden/: corpus.yaml  test_golden_corpus.py
tests/property/: test_property_chain.py  test_property_finality_and_gates.py
